@@ -58,6 +58,7 @@ is why we only explain the basics in this document.
 <LI><A HREF="#sec:2.5">2.5 Icons and Labels</A>
 <LI><A HREF="#sec:2.6">2.6 Undo and redo</A>
 <LI><A HREF="#sec:2.7">2.7 View consistency</A>
+<LI><A HREF="#sec:2.8">2.8 Printing</A>
 </UL>
 <LI><A HREF="#sec:3"><B>3 Semantic Web practice</B></A>
 <UL>
@@ -435,6 +436,18 @@ the background thread triggers the UI to update.
 proper update. When in doubt collapse and re-expand the hierarchy and/or 
 switch the table to another resource and back to force proper update. 
 Please report inconsistencies you think can be avoided.
+
+<H3><A NAME="sec:2.8">2.8 Printing</A></H3>
+
+<P>There is very limited support to print graphical representations. The 
+main tool has a <EM>Print hierarchy</EM> menu, which prints the current 
+expansion of the left hierarchy window on a single sheet of paper. The <EM>RDF 
+graph viewer</EM>, started with <EM>View diagram</EM> also provides a 
+print option.
+
+<P>Note that not only the visible part of the window, but also the 
+invisible parts are printed. The result is scaled down to fit a single 
+page.
 
 <H2><A NAME="sec:3">3 Semantic Web practice</A></H2>
 
